--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
     <!-- Content here -->
 
 
-   
     <div class="row">
-
-      <div class="col-sm text-center">
-<h2 class="text-center">Download</h2>      </div>
+      <div class="col-sm">
+<img src="https://github.com/codinga-io/clickappsipa/blob/master/icon-1024.png?raw=true" style="object-fit:contain; width:100%" alt="">
+      </div>
     </div>
     <div class="row">
 
       <div class="col-sm text-center">
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/codinga-io/testapp/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">اضغط هنا</a>
+<h2 class="text-center">تحميل تطبيق الرمال الذهبية</h2>      </div>
+    </div>
+    <div class="row">
+
+      <div class="col-sm text-center">
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/codinga-io/clickappsipa/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">اضغط هنا</a>
       </div>
       </div>
     </div>
