--- a/index.html
+++ b/index.html
@@ -17,20 +17,16 @@
     <!-- Content here -->
 
 
+   
     <div class="row">
-      <div class="col-sm">
-<img src="https://github.com/codinga-io/clickappsipa/blob/master/icon-1024.png?raw=true" style="object-fit:contain; width:100%" alt="">
-      </div>
+
+      <div class="col-sm text-center">
+<h2 class="text-center">Download</h2>      </div>
     </div>
     <div class="row">
 
       <div class="col-sm text-center">
-<h2 class="text-center">تحميل تطبيق الرمال الذهبية</h2>      </div>
-    </div>
-    <div class="row">
-
-      <div class="col-sm text-center">
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/codinga-io/clickappsipa/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">اضغط هنا</a>
+        <a href="itms-services://?action=download-manifest&url=https://github.com/codinga-io/testapp/blob/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Clickhere</a>
       </div>
       </div>
     </div>
