--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
 
       <div class="col-sm text-center">
-        <a href="itms-services://?action=download-manifest&url=https://github.com/codinga-io/testapp/blob/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Clickhere</a>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/codinga-io/testapp/master/manifest.plist" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Clickhere</a>
       </div>
       </div>
     </div>
